--- a/static/index.css
+++ b/static/index.css
@@ -2,13 +2,36 @@
 @keyframes shake{2%{transform:translate(1.5px, -1.5px) rotate(-.5deg)}4%{transform:translate(-1.5px, -.5px) rotate(1.5deg)}6%{transform:translate(1.5px, 2.5px) rotate(-.5deg)}8%{transform:translate(2.5px, .5px) rotate(-.5deg)}10%{transform:translate(2.5px, -.5px) rotate(-.5deg)}12%{transform:translate(-.5px, 1.5px) rotate(1.5deg)}14%{transform:translate(2.5px, -.5px) rotate(1.5deg)}16%{transform:translate(.5px, -1.5px) rotate(.5deg)}18%{transform:translate(2.5px, 2.5px) rotate(-.5deg)}20%{transform:translate(1.5px, -.5px) rotate(1.5deg)}22%{transform:translate(-.5px, 1.5px) rotate(.5deg)}24%{transform:translate(-1.5px, 1.5px) rotate(.5deg)}26%{transform:translate(2.5px, .5px) rotate(1.5deg)}28%{transform:translate(-.5px, -.5px) rotate(.5deg)}30%{transform:translate(.5px, -.5px) rotate(.5deg)}32%{transform:translate(1.5px, -.5px) rotate(1.5deg)}34%{transform:translate(1.5px, .5px) rotate(-.5deg)}36%{transform:translate(.5px, 2.5px) rotate(.5deg)}38%{transform:translate(-1.5px, -.5px) rotate(.5deg)}40%{transform:translate(.5px, -.5px) rotate(.5deg)}42%{transform:translate(.5px, -.5px) rotate(1.5deg)}44%{transform:translate(-1.5px, .5px) rotate(1.5deg)}46%{transform:translate(-1.5px, -.5px) rotate(-.5deg)}48%{transform:translate(-1.5px, -.5px) rotate(-.5deg)}50%{transform:translate(-.5px, -.5px) rotate(.5deg)}52%{transform:translate(-1.5px, .5px) rotate(1.5deg)}54%{transform:translate(2.5px, .5px) rotate(-.5deg)}56%{transform:translate(1.5px, 2.5px) rotate(1.5deg)}58%{transform:translate(.5px, 1.5px) rotate(1.5deg)}60%{transform:translate(-1.5px, -1.5px) rotate(1.5deg)}62%{transform:translate(.5px, 1.5px) rotate(-.5deg)}64%{transform:translate(1.5px, 2.5px) rotate(1.5deg)}66%{transform:translate(1.5px, -.5px) rotate(1.5deg)}68%{transform:translate(-1.5px, 1.5px) rotate(.5deg)}70%{transform:translate(.5px, .5px) rotate(-.5deg)}72%{transform:translate(-.5px, -.5px) rotate(.5deg)}74%{transform:translate(.5px, -1.5px) rotate(.5deg)}76%{transform:translate(-.5px, 1.5px) rotate(.5deg)}78%{transform:translate(1.5px, -1.5px) rotate(-.5deg)}80%{transform:translate(-1.5px, -.5px) rotate(.5deg)}82%{transform:translate(.5px, -.5px) rotate(.5deg)}84%{transform:translate(2.5px, 2.5px) rotate(1.5deg)}86%{transform:translate(2.5px, -.5px) rotate(1.5deg)}88%{transform:translate(.5px, .5px) rotate(-.5deg)}90%{transform:translate(-.5px, -1.5px) rotate(-.5deg)}92%{transform:translate(2.5px, 1.5px) rotate(-.5deg)}94%{transform:translate(2.5px, -1.5px) rotate(-.5deg)}96%{transform:translate(2.5px, 2.5px) rotate(.5deg)}98%{transform:translate(2.5px, -.5px) rotate(.5deg)}0%,100%{transform:translate(0, 0) rotate(0)}}.shake:hover,.shake-trigger:hover .shake,.shake.shake-freeze,.shake.shake-constant{animation-name:shake;animation-duration:100ms;animation-timing-function:ease-in-out;animation-iteration-count:infinite}
 
 body {
-    font-family: Arial;
+    background-color: #f0f0ff;
+    font-family: 'Open Sans', sans-serif;
 }
 
 .value {
     font-weight: 600;
     font-size: 1.2em;
     transition: font 1s ease-out;
+}
+
+section {
+    margin: auto;
+    max-width: 900px;
+    padding: 1px 20px;
+    background-color: white;
+    box-shadow: 0 20px 50px -30px black;
+}
+
+.petition{
+    margin: 50px 10px;
+}
+
+.petition p{
+    max-width: 800px;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-evenly;
+    align-items: baseline;
+}
+.petition p{
 }
 
 .petition:nth-child(1) .value {
@@ -65,4 +88,12 @@ body {
 .petition.hot img{
     height: 80px;
     width: 80px;
+}
+
+footer {
+    padding: 10px 0;
+}
+
+footer span{
+    margin: 0 10px;
 }
